# api-rest-rust

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md
.cargo/: config.toml
migrations/2026-07-06-133013-0000_create_users/: up.sql
src/: main.rs  schema.rs
src/auth/: extractor.rs  jwt.rs  mod.rs  models.rs  routes.rs  service.rs
src/models/: user.rs
src/repositories/: user_repository.rs
src/routes/: router.rs  routes.rs
src/services/: user_service.rs
