[package]
name = "api-rest-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
diesel = { version = "2.2.0", features = ["postgres", "r2d2", "chrono", "uuid"] }
dotenvy = "0.15"
r2d2 = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
jsonwebtoken = "9"